<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <TextView
        android:id="@+id/history_actions_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:lineSpacingExtra="6dp"
        android:padding="12dp"
        android:text="@string/history_options_title"
        android:textColor="@color/secondaryTitlesColor"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/reset_cell_value_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="?selectableItemBackground"
        android:padding="16dp"
        android:text="@string/reset_cell_value"
        android:textColor="@color/titlesColor"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cellLineColor" />

    <TextView
        android:id="@+id/reset_after_date_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="?selectableItemBackground"
        android:lineSpacingExtra="6dp"
        android:padding="16dp"
        android:text="@string/reset_after_date"
        android:textColor="@color/titlesColor"
        android:textSize="16sp" />

</LinearLayout>